# conan-cmake-hello

./: LICENSE  README.md
consumer/: CMakeLists.txt  conanfile.txt
consumer-cmake/: CMakeLists.txt
package/: conanfile.py
